src/objects/PhoneHome_Data__c.object
<CustomObject>
    <fields>
        <fullName>Host_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Host Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Diag_Upload_Date__c</fullName>
        <label>Last Diag Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freemium</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>30-Day Trial</fullName>
                </value>
                <value>
                    <fullName>VHM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensee_Email__c</fullName>
        <label>Licensee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VM_Count__c</fullName>
        <label>VM Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PhoneHome Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Licensee_Email__c</columns>
        <columns>License_Type__c</columns>
        <columns>Host_Count__c</columns>
        <columns>VM_Count__c</columns>
        <columns>Last_Diag_Upload_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PhoneHome Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PhoneHome Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>